2004-06-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/my-lily-parser.cc (My_lily_parser): only copy lexer if it
	exists

2004-06-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: 
	* buildscripts/guile-gnome.sh: Update wrt fixed GUILE CVS.

	* debian/: Apply Debian patch (Anthony Fok).

2004-06-22  Heikki Junes   <hjunes@cc.hut.fi>

	* Documentation/user/music-glossary.tely: fix titling; @top is already
	an @unnumbered @chapter.
 
2004-06-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* debian/GNUmakefile (EXTRA_DIST_FILES):
	(CONF_FILES): update file list.

	* lily/stencil.cc (interpret_stencil_expression): bugfix.

2004-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/: Remove cruft (requested Anthony Fok.)

	* buildscripts/guile-gnome.sh: Build without gcc libtool version
	juggling.

	* scm/framework-gnome.scm: Cleanups.  Resurrect +/- canvas scaling.
	Add popup menu with grob properties.

	* lily/grob-scheme.cc (ly:grob-properties):
	(ly:grob-basic-properties): New function.

	* lily/stencil.cc (interpret_stencil_expression): Comment-out
	"no-origin" call.  Fixes -fps output.

	* scm/output-ps.scm (no-origin): Add dummy implementation.

	* scm/output-gnome.scm (define-origin): Remove
	(grob-cause): Add.

	* scm/output-ps.scm (scm):
	* scm/output-tex.scm (scm): Remove define-origin from exports list.
	(define-origin): Remove.

	* scm/output-gnome.scm (define-origin): 

	* scm/lily.scm (ly:all-output-backend-commands): Remove
	define-origin.  Add grob-cause.

2004-06-21  Heikki Junes   <hjunes@cc.hut.fi>

        * buildscripts/lilypond-words.py: add ly/portugues.ly.

2004-06-20  Heikki Junes   <hjunes@cc.hut.fi>
 
	* Documentation/user/GNUmakefile:
	* stepmake/stepmake/texinfo-rules: add Cascading Style Sheet using
	--include-css=.../texinfo.css; command includes css into the html.

	* Documentation/texinfo.css: add file.
	define <hr> as black and thin.            
 
2004-06-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>
