@@ -1,5 +1,8 @@
 2004-06-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/my-lily-lexer.cc (My_lily_lexer): copy scopes so temporary
+	assignments don't reach the original file.
+
 	* lily/my-lily-parser.cc (My_lily_parser): only copy lexer if it
 	exists
 
